log
Thu 27 Mar 2025 04:47:41 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Thu 27 Mar 2025 04:53:26 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 15/70
cb9a611
Thu 27 Mar 2025 04:56:10 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
831c3d7
Thu 27 Mar 2025 04:57:00 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
f8b5870
Thu 27 Mar 2025 06:40:06 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|4
total_score: 25/70
c52a3ad
Thu 27 Mar 2025 06:43:59 PM UTC: 
 list.c | 18 ++++++------------
 1 file changed, 6 insertions(+), 12 deletions(-)
 tests:  5|4
total_score: 25/70
88306c4
Thu 27 Mar 2025 06:44:56 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
600f4a4
Thu 27 Mar 2025 06:55:18 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
test.c: In function ‘prevList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:101:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  101 | void cleanList(List *list) {
      |      ^~~~~~~~~
list.c:94:7: error: ‘popBack’ defined but not used [-Werror=unused-function]
   94 | void *popBack(List *list) {
      |       ^~~~~~~
list.c:82:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   82 | void pushBack(List *list, void *data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9ee6e14
Thu 27 Mar 2025 06:56:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7216239
Thu 27 Mar 2025 06:58:37 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f1c9c23
Thu 27 Mar 2025 07:00:05 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
ea9b44b
Thu 27 Mar 2025 07:02:21 PM UTC: 
 list.c | 9 ---------
 1 file changed, 9 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
   71 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
76c6ba6
Thu 27 Mar 2025 07:03:05 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:29: error: expected declaration specifiers before ‘}’ token
   70 | void * prevList(List *list) }
      |                             ^
list.c:72:40: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   72 | void pushFront(List *list, void *data) {}
      |                                        ^
list.c:74:39: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   74 | void pushBack(List *list, void *data) {
      |                                       ^
list.c:79:42: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   79 | void pushCurrent(List *list, void *data) {}
      |                                          ^
list.c:81:28: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   81 | void *popFront(List *list) {
      |                            ^
list.c:86:27: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   86 | void *popBack(List *list) {
      |                           ^
list.c:91:30: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   91 | void *popCurrent(List *list) { return NULL; }
      |                              ^
list.c:93:28: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   93 | void cleanList(List *list) {
      |                            ^
test.c:9:1: error: parameter ‘test_id’ is initialized
    9 | int test_id = -1;
      | ^~~
test.c:12:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   12 | int success(){
      |              ^
test.c:17:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   17 | void err_msg(char* msg){
      |                        ^
test.c:24:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   24 | void ok_msg(char* msg){
      |                       ^
test.c:30:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   30 | void info_msg(char* msg){
      |                         ^
test.c:35:75: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   35 | int test_suite(int(*test)(), char* msg, int max_score, int id, int req_id){
      |                                                                           ^
test.c:51:26: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   51 | List* initialize_exList(){
      |                          ^
test.c:73:29: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   73 | List* initialize_emptyList(){
      |                             ^
test.c:83:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   83 | int test_create(){
      |                  ^
test.c:98:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   98 | int test_first_next(){
      |                      ^
test.c:171:21: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  171 | int test_last_prev(){
      |                     ^
test.c:233:21: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  233 | int test_pushfront(){
      |                     ^
test.c:298:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  298 | int test_pushcurrent(){
      |                       ^
test.c:357:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  357 | int test_popcurrent(){
      |                      ^
test.c:448:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  448 | int main( int argc, char *argv[] ) {
      |                                    ^
list.c:70:8: error: old-style parameter declarations in prototyped function definition
   70 | void * prevList(List *list) }
      |        ^~~~~~~~
test.c:469: error: expected ‘{’ at end of input
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
54f8c4f
Thu 27 Mar 2025 07:03:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:30: error: control reaches end of non-void function [-Werror=return-type]
   70 | void * prevList(List *list) {}
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
e045d7f
Thu 27 Mar 2025 07:06:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
9f59d65
Thu 27 Mar 2025 07:14:45 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e392a78
Thu 27 Mar 2025 07:44:42 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
4f21896
Thu 27 Mar 2025 08:51:51 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
7a6be79
Thu 27 Mar 2025 08:57:49 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
4e1e9a4
Thu 27 Mar 2025 09:03:16 PM UTC: 
 list.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  11|1
total_score: 55/70
e9cccc7
Thu 27 Mar 2025 09:16:32 PM UTC: 
 list.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
test.c: In function ‘popCurrent’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:153:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  153 | void cleanList(List *list) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4146ba0
Thu 27 Mar 2025 09:16:53 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|0
total_score: 70/70
8919d4e
Fri 28 Mar 2025 02:15:25 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  12|0
total_score: 70/70
3198ec9
Fri 28 Mar 2025 02:18:03 PM UTC: 
 list.c | 27 ++++++++++++++++++---------
 1 file changed, 18 insertions(+), 9 deletions(-)
 tests:  12|0
total_score: 70/70
7b0e2f2
